final updates